Made update list and see completed repair controls visible again

--- a/src/app/management-view/repair-dashboard/repair-manage/repair-grid-results/repair-grid-results.component.scss
+++ b/src/app/management-view/repair-dashboard/repair-manage/repair-grid-results/repair-grid-results.component.scss
@@ -1,7 +1,3 @@
-#grid-container {
-    height: 600px;
-}
-
 #footerControls {
     height: 34px;
 }
